Rinku installed & Task Done ! -> Post cat + upd elment

--- a/app/views/sub_tasks/destroy.js.erb
+++ b/app/views/sub_tasks/destroy.js.erb
@@ -1,2 +1,2 @@
-$('#subtask_iter<%=@sub_task.id%>').fadeOut();
+$('#subtask_iter<%=@sub_task.id%>').slideUp();
 $('#sn_subtask_n<%=@task.id%>').html('(<%=@task.st_n%>/<%=@task.st_d%>)')
