--- a/app/views/tasks/js/update.js.erb
+++ b/app/views/tasks/js/update.js.erb
@@ -1,4 +1,10 @@
-$('#task_iter<%=@task.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task} %>");
+<%- if @elements %>
+  <% @elements.each do |elm| %>
+    $('#task_iter<%=@task.id%>_elm<%=elm.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: elm} %>");
+  <% end %>
+<% else %>
+  $('#task_iter<%=@task.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: nil} %>");
+<% end %>
 $('.task_participants').replaceWith("<%=  j render partial: 'tasks/sn/participants', locals: {task: @task, users: @task.cached_users} %>");
 $('.sn_header_title').html('<%=@task.title%>')
 <% if (@task.date.present?) %>
