TaskBoard done -> Event

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -488,6 +488,19 @@
   color: #dd5250;
 }
 
+.nav_title_group{
+  position: fixed;
+  background: #29ae8d;
+  width: auto;
+  padding: 5px;
+  margin-top: -30px;
+  min-width: 100px;
+  text-align: center;
+  border-radius: 0px 0px 5px 5px; 
+  opacity: 0.6;
+  color: white;
+}
+
 /********************************************************************/
 /*** REGISTRATION1 - LOGIN ***/
 
