--- a/app/views/tasks/js/done.js.erb
+++ b/app/views/tasks/js/done.js.erb
@@ -1,15 +1,17 @@
 var pathname = window.location.pathname;
 var group = pathname.split("/")[2]
 if(pathname == '/' || pathname == '/groups/'+ group ){
-  $('#task_iter<%=@task.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task} %>");
+  <% @elements.each do |elm| %>
+    $('#task_iter<%=@task.id%>_elm<%=elm.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: elm} %>");
+  <% end %>
 } else if( pathname == '/tasks' || pathname == '/groups/'+ group +'/taskboard' ){
   $("#task_iter<%=@task.id%>").fadeOut(300, function() { $(this).remove(); });
   if('<%=@task.done%>' == 'false'){
-    $('.taskboard_list').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task} %>");
+    $('.taskboard_list').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: nil} %>");
     $('#task_iter<%=@task.id%>').hide();
     $('#task_iter<%=@task.id%>').slideDown();
   } else{
-    $('.done_task_list').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task} %>");
+    $('.done_tasks').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: nil} %>");
     $('#task_iter<%=@task.id%>').hide();
     $('#task_iter<%=@task.id%>').slideDown();
   }
