--- a/app/views/tasks/js/unparticipate.js.erb
+++ b/app/views/tasks/js/unparticipate.js.erb
@@ -1,3 +1,9 @@
 $('#<%=@task.id%>participant_box<%=@user.id%>').fadeOut();
 $('#btn_add_participation<%=@task.id%>').slideDown();
-$('#task_user_icon<%=@task.id%>').replaceWith("<%=  j render partial: 'tasks/user_icon', locals: {task: @task} %>");
+<%- if @elements %>
+  <% @elements.each do |elm| %>
+    $('#task_iter<%=@task.id%>_elm<%=elm.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: elm} %>");
+  <% end %>
+<% else %>
+  $('#task_user_icon<%=@task.id%>').replaceWith("<%=  j render partial: 'tasks/user_icon', locals: {task: @task, elm: nil} %>");
+<% end %>
