--- a/app/views/tasks/js/done.js.erb
+++ b/app/views/tasks/js/done.js.erb
@@ -5,14 +5,12 @@ if(pathname == '/' || pathname == '/groups/'+ group ){
     $('#task_iter<%=@task.id%>_elm<%=elm.id%>').replaceWith("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: elm} %>");
   <% end %>
 } else if( pathname == '/tasks' || pathname == '/groups/'+ group +'/taskboard' ){
-  $("#task_iter<%=@task.id%>").fadeOut(300, function() { $(this).remove(); });
-  if('<%=@task.done%>' == 'false'){
-    $('.taskboard_list').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: nil} %>");
-    $('#task_iter<%=@task.id%>').hide();
-    $('#task_iter<%=@task.id%>').slideDown();
-  } else{
+  $("#task_iter<%=@task.id%>").slideUp(300, function() { $(this).remove(); });
+  <%- if @idz == 1 %>
     $('.done_tasks').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: nil} %>");
+  <% else %>
+    $('.tasks').prepend("<%=  j render partial: 'tasks/task', locals: {task: @task, elm: nil} %>");
     $('#task_iter<%=@task.id%>').hide();
     $('#task_iter<%=@task.id%>').slideDown();
-  }
+  <% end %>
 }
