--- a/app/views/tasks/sn/_participant.html.erb
+++ b/app/views/tasks/sn/_participant.html.erb
@@ -3,12 +3,12 @@
     <%= user.pseudo %>
   </div>
   <%- if user.id == current_user.id  %>
-    <a class="participant_btn" href="/tasks/<%=@task.id%>/unparticipate" data-method="patch" data-remote="true">
+    <a class="participant_btn" href="/tasks/<%=@task.id%>/unparticipate?groupid=<%=@group.id%>" data-method="patch" data-remote="true">
       <i class="fa fa-close"></i>
     </a>
   <% else %>
     <%- if @task.user_id == current_user.id %>
-      <a class="participant_btn" href="/tasks/<%=@task.id%>/delparticipate?userid=<%=user.id%>" data-method="patch" data-remote="true">
+      <a class="participant_btn" href="/tasks/<%=@task.id%>/delparticipate?userid=<%=user.id%>&groupid=<%=@group.id%>" data-method="patch" data-remote="true">
         <i class="fa fa-close"></i>
       </a>
     <% end %>
