--- a/app/views/tasks/sn/_participants.html.erb
+++ b/app/views/tasks/sn/_participants.html.erb
@@ -1,11 +1,11 @@
 <div class="task_participants">
-  <a class="btn_add_participation" id="btn_add_participation<%=@task.id%>" href="/tasks/<%=@task.id%>/participate" data-method="patch" data-remote="true">
+  <a class="btn_add_participation" id="btn_add_participation<%=@task.id%>" href="/tasks/<%=@task.id%>/participate?groupid=<%=@group.id%>" data-method="patch" data-remote="true">
     <i class="fa fa-plus" id="fa_icons"></i>
     Participer
   </a>
   <div id="task_participants_list<%=@task.id%>">
     <% users.each do |user| %>
-      <%= render 'tasks/sn/participant_item', user: user %>
+      <%= render 'tasks/sn/participant', user: user %>
     <% end %>
   </div>
   
